add feedback messages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body onload="inicializa();" class="body">
     <canvas id="canvas"></canvas>
+    <div class="messages"></div>
     <script src="./js/main.js"></script>
   </body>
 </html>
